--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ flask>=2.0.0
 flask-socketio>=5.2.0
 eventlet>=0.33.3
 python-dotenv>=0.20.0
+google-api-core>=2.24.2
 google-genai
 rdflib>=6.2.0
 numpy>=1.22.0
